...
                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                    <real key="value" value="41.5"/>
                                                </userDefinedRuntimeAttribute>
                                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                            </userDefinedRuntimeAttributes>
                                        </imageView>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0 Pokemons" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3fn-b3-DCa">
                                            <rect key="frame" x="99" y="53" width="83" height="21"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" name="GillSans-Light" family="Gill Sans" pointSize="17"/>
                                            <nil key="textColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="j5p-Dn-8S7" id="7bl-2T-IBu"/>
                            <outlet property="delegate" destination="j5p-Dn-8S7" id="NP6-7s-dt9"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Treiners" id="Sap-Bu-wnH">
                        <barButtonItem key="rightBarButtonItem" title="Start Battle" id="keT-S4-5BP">
                            <connections>
                                <action selector="startBattle:" destination="j5p-Dn-8S7" id="bMB-nT-6K1"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                    <outlet property="delegate" destination="BfQ-op-o2R" id="dme-9m-Ond"/>
                                </connections>
                            </tableView>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6ll-AB-Mbz">
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <items>
                                    <navigationItem title="Pokemons" id="Xuc-ma-ws0">
                                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="GZ6-zR-ZdK">
                                            <connections>
                                                <action selector="done:" destination="BfQ-op-o2R" id="iOU-zN-rFb"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
...
