...
    // All Teams
    var allTreiners: [Trainer] {
        return [ash, gary]
    }
    
    fileprivate init() {
        self.ash = Trainer(name: "Ash", pokemons: [])
        self.gary = Trainer(name: "Gary", pokemons: [])
    }
    
    /// Returns all Pokemon from the local JSON
    var pokemons: [Pokemon] {
        guard let path = Bundle(for: type(of: self)).path(forResource: "PokemonsInfo", ofType: "json") else { fatalError("Can't find Pokemon JSON resource.") }
        
...
